src/app/user-list/user-list.component.scss
.name-card {
  width: 400px;
  height: 250px;
  margin: 8px 8px 8px 32px;
}

:host {
  display: flex;
  flex-direction: row;
  //align-items: center;
  //justify-content: center;
  //height: 50%;
  flex-wrap: wrap;
}

.name-picture {
  width: 128px;
  height: 128px;
}

table {
  width: 100%;
}

.mat-column-name {
  text-align: center;
  font-weight: bold;
}

.mat-column-picture {
  font-size: 20px;
  text-align: center;
}

.mat-column-action {
  text-align: center;
  font-style: italic;
}

.mr-32 {
  margin-right: 32px;
}

.ml-32 {
  margin-left: 32px;
}

.mat-sort-header-container {
  display: flex;
  justify-content: center;
}

th.mat-header-cell {
  text-align: center !important;
}

tr.mat-cell {
  text-align: center !important;
}

